# autopub-plugins

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: pr-check.yml  release.yml
src/strawberry_autopub_plugins/: __init__.py  invite_contributors.py  typefully.py
tests/: test_invite_contributors.py  test_typefully.py
